@@ -31,3 +31,5 @@ Release 1.0.2
 
 * First version including the SquirrelSQL plugin ( for Squirrel 2.6.4 )
 * DOT Path ( AT&T Layout library ) is now configurable with preferences dialog
+* Tested reverse engineering with the following databases
+  PostgreSQL Dialect : PostgreSQL 8.2.6
